kubernetes/manifests/grafana-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stack-grafana
  namespace: monitoring
spec:
  selector:
    app.kubernetes.io/instance: prometheus-stack
    app.kubernetes.io/name: grafana
  ports:
    - name: http
      port: 80
      targetPort: 3000
