kubernetes/manifests/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: monitoring
spec:
  selector:
    app: nginx
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: NodePort  # Сделаем NodePort, чтобы был внешний доступ
